--- a/blog-details.html
+++ b/blog-details.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Xolio - Creative Agency Template">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+		<link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.png">
         <!-- Place favicon.ico in the root directory -->
 
         <!-- CSS here -->
@@ -28,7 +28,7 @@
         <div id="preloader">
             <div id="loader" class="loader">
                 <div class="loader-container">
-                    <div class="loader-icon"><img src="assets/img/preloader.png" alt="Crazy-Softnet Technologies"></div>
+                    <div class="loader-icon"><img src="/assets/img/preloader.png" alt="Crazy-Softnet Technologies"></div>
                 </div>
             </div>
         </div>
@@ -55,7 +55,7 @@
                             <div class="menu-wrap">
                                 <nav class="menu-nav">
                                     <div class="logo">
-                                        <a href="index.html"><img src="assets/img/logo/logo.png" alt="Logo"></a>
+                                        <a href="index.html"><img src="/assets/img/logo/logo.png" alt="Logo"></a>
                                     </div>
                                     <div class="navbar-wrap main-menu d-none d-lg-flex">
                                         <ul class="navigation">
@@ -98,7 +98,7 @@
                                 <nav class="menu-box">
                                     <div class="close-btn"><i class="fas fa-times"></i></div>
                                     <div class="nav-logo">
-                                        <a href="index.html"><img src="assets/img/logo/logo.png" alt="Logo"></a>
+                                        <a href="index.html"><img src="/assets/img/logo/logo.png" alt="Logo"></a>
                                     </div>
                                     <div class="menu-outer">
                                         <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
@@ -178,7 +178,7 @@
                                                     <a href="project-details.html" class="btn">Details <span></span></a>
                                                 </div>
                                                 <div class="thumb">
-                                                    <img src="assets/img/images/our_project_img.png" alt="">
+                                                    <img src="/assets/img/images/our_project_img.png" alt="">
                                                 </div>
                                             </div>
                                         </div>
@@ -190,7 +190,7 @@
                                     <h4 class="title">Customer Support</h4>
                                     <div class="customer-support-content">
                                         <div class="content-top">
-                                            <img src="assets/img/images/support_img.png" alt="">
+                                            <img src="/assets/img/images/support_img.png" alt="">
                                             <h4 class="title">Need Help Choosing a Plan?</h4>
                                         </div>
                                         <p>We offer solutions for businesses of all sizes. For questions about our plans and products,,
@@ -235,7 +235,7 @@
                                         <ul class="list-wrap">
                                             <li class="avatar">
                                                 <a href="blog-details.html">
-                                                    <img src="assets/img/blog/blog_avatar01.png" alt="">
+                                                    <img src="/assets/img/blog/blog_avatar01.png" alt="">
                                                     Victor Pacheco
                                                 </a>
                                             </li>
@@ -244,7 +244,7 @@
                                     </div>
                                 </div>
                                 <div class="blog-details-img">
-                                    <img src="assets/img/blog/blog_details_img.jpg" alt="">
+                                    <img src="/assets/img/blog/blog_details_img.jpg" alt="">
                                 </div>
                                 <div class="bd-content-bottom">
                                     <h2 class="title">Pilotage de la performance : vos indicateurs <br> dans le même viseur</h2>
@@ -270,7 +270,7 @@
                                         <li>
                                             <div class="comments-box">
                                                 <div class="comments-avatar">
-                                                    <img src="assets/img/blog/comment_avatar01.png" alt="">
+                                                    <img src="/assets/img/blog/comment_avatar01.png" alt="">
                                                 </div>
                                                 <div class="comment-text">
                                                     <h4 class="title">Lincoln Culhane</h4>
@@ -283,7 +283,7 @@
                                         <li>
                                             <div class="comments-box">
                                                 <div class="comments-avatar">
-                                                    <img src="assets/img/blog/comment_avatar02.png" alt="">
+                                                    <img src="/assets/img/blog/comment_avatar02.png" alt="">
                                                 </div>
                                                 <div class="comment-text">
                                                     <h4 class="title">Emerson Septimus</h4>
@@ -294,7 +294,7 @@
                                             </div>
                                             <div class="comments-box children">
                                                 <div class="comments-avatar">
-                                                    <img src="assets/img/blog/comment_avatar03.png" alt="">
+                                                    <img src="/assets/img/blog/comment_avatar03.png" alt="">
                                                 </div>
                                                 <div class="comment-text">
                                                     <h4 class="title">Emerson Septimus</h4>
@@ -372,10 +372,10 @@
                             </div>
                         </div>
                         <div class="newsletter-shape-wrap-two">
-                            <img src="assets/img/images/h3_newsletter_shape01.png" alt="">
-                            <img src="assets/img/images/h3_newsletter_shape02.png" alt="">
-                            <img src="assets/img/images/h3_newsletter_shape03.png" alt="">
-                            <img src="assets/img/images/h3_newsletter_shape04.png" alt="">
+                            <img src="/assets/img/images/h3_newsletter_shape01.png" alt="">
+                            <img src="/assets/img/images/h3_newsletter_shape02.png" alt="">
+                            <img src="/assets/img/images/h3_newsletter_shape03.png" alt="">
+                            <img src="/assets/img/images/h3_newsletter_shape04.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -394,7 +394,7 @@
                             <div class="col-xl-6 col-lg-8">
                                 <div class="footer-content-two text-center">
                                     <div class="logo">
-                                        <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                        <a href="index.html"><img src="/assets/img/logo/logo.png" alt=""></a>
                                     </div>
                                     <p>Agency is a full-service agency, busy designing and building beautiful digital products,
                                         brands, and experiences.</p>
@@ -413,10 +413,10 @@
                                 <div class="footer-social-two">
                                     <ul class="list-wrap">
                                         <li class="title">Follow us</li>
-                                        <li><a href="#"><img src="assets/img/icon/footer_icon01.png" alt=""></a></li>
-                                        <li><a href="#"><img src="assets/img/icon/footer_icon02.png" alt=""></a></li>
-                                        <li><a href="#"><img src="assets/img/icon/footer_icon03.png" alt=""></a></li>
-                                        <li><a href="#"><img src="assets/img/icon/footer_icon04.png" alt=""></a></li>
+                                        <li><a href="#"><img src="/assets/img/icon/footer_icon01.png" alt=""></a></li>
+                                        <li><a href="#"><img src="/assets/img/icon/footer_icon02.png" alt=""></a></li>
+                                        <li><a href="#"><img src="/assets/img/icon/footer_icon03.png" alt=""></a></li>
+                                        <li><a href="#"><img src="/assets/img/icon/footer_icon04.png" alt=""></a></li>
                                     </ul>
                                 </div>
                             </div>
