--- a/project-details.html
+++ b/project-details.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Xolio - Creative Agency Template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -30,7 +30,7 @@
     <div id="preloader">
         <div id="loader" class="loader">
             <div class="loader-container">
-                <div class="loader-icon"><img src="assets/img/preloader.png"
+                <div class="loader-icon"><img src="/assets/img/preloader.png"
                         alt="Crazy-Softnet Technologies"></div>
             </div>
         </div>
@@ -58,7 +58,7 @@
                         <div class="menu-wrap">
                             <nav class="menu-nav">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt="Logo"></a>
+                                    <a href="index.html"><img src="/assets/img/logo/logo.png" alt="Logo"></a>
                                 </div>
                                 <div class="navbar-wrap main-menu d-none d-lg-flex">
                                     <ul class="navigation">
@@ -102,7 +102,7 @@
                             <nav class="menu-box">
                                 <div class="close-btn"><i class="fas fa-times"></i></div>
                                 <div class="nav-logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt="Logo"></a>
+                                    <a href="index.html"><img src="/assets/img/logo/logo.png" alt="Logo"></a>
                                 </div>
                                 <div class="menu-outer">
                                     <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
@@ -185,7 +185,7 @@
                                                 <a href="project-details.html" class="btn">Details <span></span></a>
                                             </div>
                                             <div class="thumb">
-                                                <img src="assets/img/images/our_project_img.png" alt="">
+                                                <img src="/assets/img/images/our_project_img.png" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -197,7 +197,7 @@
                                 <h4 class="title">Customer Support</h4>
                                 <div class="customer-support-content">
                                     <div class="content-top">
-                                        <img src="assets/img/images/support_img.png" alt="">
+                                        <img src="/assets/img/images/support_img.png" alt="">
                                         <h4 class="title">Need Help Choosing a Plan?</h4>
                                     </div>
                                     <p>We offer solutions for businesses of all sizes. For questions about our plans and
@@ -265,7 +265,7 @@
                         <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-three cat-two">
                             <div class="project-item-two">
                                 <div class="project-thumb-two">
-                                    <a href="project-details.html"><img src="assets/img/project/h2_project_img01.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/h2_project_img01.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="project-content-two">
@@ -277,7 +277,7 @@
                         <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-four cat-five">
                             <div class="project-item-two">
                                 <div class="project-thumb-two">
-                                    <a href="project-details.html"><img src="assets/img/project/h2_project_img02.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/h2_project_img02.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="project-content-two">
@@ -289,7 +289,7 @@
                         <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-two cat-one">
                             <div class="project-item-two">
                                 <div class="project-thumb-two">
-                                    <a href="project-details.html"><img src="assets/img/project/h2_project_img03.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/h2_project_img03.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="project-content-two">
@@ -301,7 +301,7 @@
                         <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-four cat-five">
                             <div class="project-item-two">
                                 <div class="project-thumb-two">
-                                    <a href="project-details.html"><img src="assets/img/project/h2_project_img05.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/h2_project_img05.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="project-content-two">
@@ -313,7 +313,7 @@
                         <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-one cat-five">
                             <div class="project-item-two">
                                 <div class="project-thumb-two">
-                                    <a href="project-details.html"><img src="assets/img/project/h2_project_img04.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/h2_project_img04.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="project-content-two">
@@ -325,7 +325,7 @@
                         <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-two cat-five">
                             <div class="project-item-two">
                                 <div class="project-thumb-two">
-                                    <a href="project-details.html"><img src="assets/img/project/h2_project_img06.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/h2_project_img06.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="project-content-two">
@@ -356,8 +356,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="company-img">
-                            <img src="assets/img/images/company_img01.png" alt="">
-                            <img src="assets/img/images/company_img02.png" alt="" data-parallax='{"x" : 120 }'>
+                            <img src="/assets/img/images/company_img01.png" alt="">
+                            <img src="/assets/img/images/company_img02.png" alt="" data-parallax='{"x" : 120 }'>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -366,19 +366,19 @@
                             <div class="company-list">
                                 <ul class="list-wrap">
                                     <li>
-                                        <img src="assets/img/icon/check_icon.png" alt="">
+                                        <img src="/assets/img/icon/check_icon.png" alt="">
                                         Seo quotes to inspire your campaign
                                     </li>
                                     <li>
-                                        <img src="assets/img/icon/check_icon.png" alt="">
+                                        <img src="/assets/img/icon/check_icon.png" alt="">
                                         Much easier to double your business
                                     </li>
                                     <li>
-                                        <img src="assets/img/icon/check_icon.png" alt="">
+                                        <img src="/assets/img/icon/check_icon.png" alt="">
                                         Free page speed insights tool to find out exactly
                                     </li>
                                     <li>
-                                        <img src="assets/img/icon/check_icon.png" alt="">
+                                        <img src="/assets/img/icon/check_icon.png" alt="">
                                         Seo quotes to inspire your campaign
                                     </li>
                                 </ul>
@@ -389,7 +389,7 @@
                 </div>
             </div>
             <div class="company-shape-wrap">
-                <img src="assets/img/images/company_shape.png" alt="">
+                <img src="/assets/img/images/company_shape.png" alt="">
             </div>
         </section>
         <!-- company-area-end -->
@@ -411,7 +411,7 @@
                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-10">
                             <div class="services-item-five">
                                 <div class="services-icon-five">
-                                    <img src="assets/img/icon/inner_two_services_icon01.png" alt="">
+                                    <img src="/assets/img/icon/inner_two_services_icon01.png" alt="">
                                 </div>
                                 <div class="services-content-five">
                                     <h2 class="title"><a href="web-developement.html">User Interaction
@@ -423,7 +423,7 @@
                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-10">
                             <div class="services-item-five">
                                 <div class="services-icon-five">
-                                    <img src="assets/img/icon/inner_two_services_icon02.png" alt="">
+                                    <img src="/assets/img/icon/inner_two_services_icon02.png" alt="">
                                 </div>
                                 <div class="services-content-five">
                                     <h2 class="title"><a href="web-developement.html">Production <span>Design</span></a>
@@ -435,7 +435,7 @@
                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-10">
                             <div class="services-item-five">
                                 <div class="services-icon-five">
-                                    <img src="assets/img/icon/inner_two_services_icon03.png" alt="">
+                                    <img src="/assets/img/icon/inner_two_services_icon03.png" alt="">
                                 </div>
                                 <div class="services-content-five">
                                     <h2 class="title"><a href="web-developement.html">Branding <span>Design</span></a>
@@ -447,7 +447,7 @@
                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-10">
                             <div class="services-item-five">
                                 <div class="services-icon-five">
-                                    <img src="assets/img/icon/inner_two_services_icon04.png" alt="">
+                                    <img src="/assets/img/icon/inner_two_services_icon04.png" alt="">
                                 </div>
                                 <div class="services-content-five">
                                     <h2 class="title"><a href="web-developement.html">Product <span>Design</span></a>
@@ -473,7 +473,7 @@
                         <div class="col-lg-3 col-sm-6">
                             <div class="footer-widget">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo/w_logo.png" alt=""></a>
+                                    <a href="index.html"><img src="/assets/img/logo/w_logo.png" alt=""></a>
                                 </div>
                                 <div class="footer-social">
                                     <ul class="list-wrap">
@@ -520,11 +520,11 @@
                                 <h4 class="fw-title">About Store</h4>
                                 <div class="footer-about">
                                     <ul class="list-wrap">
-                                        <li><img src="assets/img/icon/phone_icon.svg" alt=""><a href="tel:0123456789">8
+                                        <li><img src="/assets/img/icon/phone_icon.svg" alt=""><a href="tel:0123456789">8
                                                 (495) 989—20—11</a></li>
-                                        <li><img src="assets/img/icon/mail_icon.svg" alt=""><a
+                                        <li><img src="/assets/img/icon/mail_icon.svg" alt=""><a
                                                 href="mailto:company@gmail.com">company@gmail.com</a></li>
-                                        <li><img src="assets/img/icon/loction_icon.svg" alt=""><span>Ranelagh Place,
+                                        <li><img src="/assets/img/icon/loction_icon.svg" alt=""><span>Ranelagh Place,
                                                 Liverpool, L3 5UL, England</span></li>
                                     </ul>
                                 </div>
@@ -538,7 +538,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="cart-img">
-                                <!-- <img src="assets/img/images/cart_img.png" alt=""> -->
+                                <!-- <img src="/assets/img/images/cart_img.png" alt=""> -->
                             </div>
                         </div>
                         <div class="col-md-6">
