--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Xolio - Creative Agency Template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -30,7 +30,7 @@
     <div id="preloader">
         <div id="loader" class="loader">
             <div class="loader-container">
-                <div class="loader-icon"><img src="assets/img/preloader.png"
+                <div class="loader-icon"><img src="/assets/img/preloader.png"
                         alt="Crazy-Softnet Technologies"></div>
             </div>
         </div>
@@ -58,7 +58,7 @@
                         <div class="menu-wrap">
                             <nav class="menu-nav">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt="Logo"></a>
+                                    <a href="index.html"><img src="/assets/img/logo/logo.png" alt="Logo"></a>
                                 </div>
                                 <div class="navbar-wrap main-menu d-none d-lg-flex">
                                     <ul class="navigation">
@@ -102,7 +102,7 @@
                             <nav class="menu-box">
                                 <div class="close-btn"><i class="fas fa-times"></i></div>
                                 <div class="nav-logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt="Logo"></a>
+                                    <a href="index.html"><img src="/assets/img/logo/logo.png" alt="Logo"></a>
                                 </div>
                                 <div class="menu-outer">
                                     <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
@@ -185,7 +185,7 @@
                                                 <a href="project-details.html" class="btn">Details <span></span></a>
                                             </div>
                                             <div class="thumb">
-                                                <img src="assets/img/images/our_project_img.png" alt="">
+                                                <img src="/assets/img/images/our_project_img.png" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -197,7 +197,7 @@
                                 <h4 class="title">Customer Support</h4>
                                 <div class="customer-support-content">
                                     <div class="content-top">
-                                        <img src="assets/img/images/support_img.png" alt="">
+                                        <img src="/assets/img/images/support_img.png" alt="">
                                         <h4 class="title">Need Help Choosing a Plan?</h4>
                                     </div>
                                     <p>We offer solutions for businesses of all sizes. For questions about our plans and
@@ -250,7 +250,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-8 col-lg-10">
                         <div class="community-img">
-                            <img src="assets/img/images/community_img.png" alt="">
+                            <img src="/assets/img/images/community_img.png" alt="">
                         </div>
                         <div class="community-content">
                             <p>Lorem ipsum dolor sit amet, sed nulla ante amet, elementum tincidunt arcu sed laoreet,
@@ -271,7 +271,7 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team-details.html"><img src="/assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
                                 <h2 class="title"><a href="team-details.html">Lav Patel</a></h2>
@@ -290,7 +290,7 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team-details.html"><img src="/assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
                                 <h2 class="title"><a href="team-details.html">Nimit Desai</a></h2>
@@ -309,7 +309,7 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team-details.html"><img src="/assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
                                 <h2 class="title"><a href="team-details.html">Preksha Patel</a></h2>
@@ -328,7 +328,7 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team-details.html"><img src="/assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
                                 <h2 class="title"><a href="team-details.html">Abhay Mandli</a></h2>
@@ -347,7 +347,7 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team-details.html"><img src="/assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
                                 <h2 class="title"><a href="team-details.html">Drashti Patel</a></h2>
@@ -388,7 +388,7 @@
                         <div class="col-lg-4">
                             <div class="inner-project-item horizoital-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_two_project01.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_two_project01.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -398,7 +398,7 @@
                             </div>
                             <div class="inner-project-item vertical-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_two_project02.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_two_project02.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -410,7 +410,7 @@
                         <div class="col-lg-4">
                             <div class="inner-project-item horizoital-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_two_project04.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_two_project04.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -420,7 +420,7 @@
                             </div>
                             <div class="inner-project-item vertical-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_two_project03.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_two_project03.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -432,7 +432,7 @@
                         <div class="col-lg-4">
                             <div class="inner-project-item horizoital-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_two_project05.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_two_project05.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -442,7 +442,7 @@
                             </div>
                             <div class="inner-project-item vertical-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_two_project06.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_two_project06.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -454,7 +454,7 @@
                         <div class="col-lg-4">
                             <div class="inner-project-item horizoital-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_two_project08.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_two_project08.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -464,7 +464,7 @@
                             </div>
                             <div class="inner-project-item vertical-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_two_project07.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_two_project07.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -476,7 +476,7 @@
                         <div class="col-lg-4">
                             <div class="inner-project-item horizoital-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_two_project09.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_two_project09.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -486,7 +486,7 @@
                             </div>
                             <div class="inner-project-item vertical-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_two_project10.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_two_project10.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -498,7 +498,7 @@
                         <div class="col-lg-4">
                             <div class="inner-project-item horizoital-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_two_project08.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_two_project08.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -508,7 +508,7 @@
                             </div>
                             <div class="inner-project-item vertical-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_two_project07.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_two_project07.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -537,32 +537,32 @@
                 <div class="row brand-active">
                     <div class="col-12">
                         <div class="brand-item-two">
-                            <img src="assets/img/brand/h3_brand_img01.png" alt="">
+                            <img src="/assets/img/brand/h3_brand_img01.png" alt="">
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="brand-item-two">
-                            <img src="assets/img/brand/h3_brand_img02.png" alt="">
+                            <img src="/assets/img/brand/h3_brand_img02.png" alt="">
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="brand-item-two">
-                            <img src="assets/img/brand/h3_brand_img03.png" alt="">
+                            <img src="/assets/img/brand/h3_brand_img03.png" alt="">
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="brand-item-two">
-                            <img src="assets/img/brand/h3_brand_img04.png" alt="">
+                            <img src="/assets/img/brand/h3_brand_img04.png" alt="">
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="brand-item-two">
-                            <img src="assets/img/brand/h3_brand_img05.png" alt="">
+                            <img src="/assets/img/brand/h3_brand_img05.png" alt="">
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="brand-item-two">
-                            <img src="assets/img/brand/h3_brand_img06.png" alt="">
+                            <img src="/assets/img/brand/h3_brand_img06.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -582,7 +582,7 @@
                         <div class="col-xl-6 col-lg-8">
                             <div class="footer-content-two text-center">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                    <a href="index.html"><img src="/assets/img/logo/logo.png" alt=""></a>
                                 </div>
                                 <p>Agency is a full-service agency, busy designing and building beautiful digital
                                     products, brands, and experiences.</p>
@@ -601,10 +601,10 @@
                             <div class="footer-social-two">
                                 <ul class="list-wrap">
                                     <li class="title">Follow us</li>
-                                    <li><a href="#"><img src="assets/img/icon/footer_icon01.png" alt=""></a></li>
-                                    <li><a href="#"><img src="assets/img/icon/footer_icon02.png" alt=""></a></li>
-                                    <li><a href="#"><img src="assets/img/icon/footer_icon03.png" alt=""></a></li>
-                                    <li><a href="#"><img src="assets/img/icon/footer_icon04.png" alt=""></a></li>
+                                    <li><a href="#"><img src="/assets/img/icon/footer_icon01.png" alt=""></a></li>
+                                    <li><a href="#"><img src="/assets/img/icon/footer_icon02.png" alt=""></a></li>
+                                    <li><a href="#"><img src="/assets/img/icon/footer_icon03.png" alt=""></a></li>
+                                    <li><a href="#"><img src="/assets/img/icon/footer_icon04.png" alt=""></a></li>
                                 </ul>
                             </div>
                         </div>
