--- a/web-developement.html
+++ b/web-developement.html
@@ -8,20 +8,20 @@
     <meta name="description" content="Xolio - Creative Agency Template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/animate.min.css">
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="assets/css/odometer.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/default.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/animate.min.css">
+    <link rel="stylesheet" href="/assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="/assets/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/assets/css/odometer.css">
+    <link rel="stylesheet" href="/assets/css/slick.css">
+    <link rel="stylesheet" href="/assets/css/default.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
     <div id="preloader">
         <div id="loader" class="loader">
             <div class="loader-container">
-                <div class="loader-icon"><img src="assets/img/preloader.png"
+                <div class="loader-icon"><img src="/assets/img/preloader.png"
                         alt="Crazy-Softnet Technologies"></div>
             </div>
         </div>
@@ -58,7 +58,7 @@
                         <div class="menu-wrap">
                             <nav class="menu-nav">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt="Logo"></a>
+                                    <a href="index.html"><img src="/assets/img/logo/logo.png" alt="Logo"></a>
                                 </div>
                                 <div class="navbar-wrap main-menu d-none d-lg-flex">
                                     <ul class="navigation">
@@ -101,7 +101,7 @@
                             <nav class="menu-box">
                                 <div class="close-btn"><i class="fas fa-times"></i></div>
                                 <div class="nav-logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt="Logo"></a>
+                                    <a href="index.html"><img src="/assets/img/logo/logo.png" alt="Logo"></a>
                                 </div>
                                 <div class="menu-outer">
                                     <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
@@ -184,7 +184,7 @@
                                                 <a href="project-details.html" class="btn">Details <span></span></a>
                                             </div>
                                             <div class="thumb">
-                                                <img src="assets/img/images/our_project_img.png" alt="">
+                                                <img src="/assets/img/images/our_project_img.png" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -196,7 +196,7 @@
                                 <h4 class="title">Customer Support</h4>
                                 <div class="customer-support-content">
                                     <div class="content-top">
-                                        <img src="assets/img/images/support_img.png" alt="">
+                                        <img src="/assets/img/images/support_img.png" alt="">
                                         <h4 class="title">Need Help Choosing a Plan?</h4>
                                     </div>
                                     <p>We offer solutions for businesses of all sizes. For questions about our plans and
@@ -249,7 +249,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-8 col-lg-10">
                         <div class="services-details-img text-center">
-                            <img src="assets/img/images/services_details_img.png" alt="">
+                            <img src="/assets/img/images/services_details_img.png" alt="">
                         </div>
                         <div class="services-details-content text-center">
                             <p>Lorem ipsum dolor sit amet, sed nulla ante amet, elementum tincidunt arcu sed laoreet,
@@ -261,7 +261,7 @@
                 </div>
             </div>
             <div class="services-details-shape">
-                <img src="assets/img/images/services_details_shape.png" alt="">
+                <img src="/assets/img/images/services_details_shape.png" alt="">
             </div>
         </div>
         <!-- services-details-area-end -->
@@ -321,8 +321,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="company-img">
-                            <img src="assets/img/images/company_img01.png" alt="">
-                            <img src="assets/img/images/company_img02.png" alt="" data-parallax='{"x" : 120 }'>
+                            <img src="/assets/img/images/company_img01.png" alt="">
+                            <img src="/assets/img/images/company_img02.png" alt="" data-parallax='{"x" : 120 }'>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -331,19 +331,19 @@
                             <div class="company-list">
                                 <ul class="list-wrap">
                                     <li>
-                                        <img src="assets/img/icon/check_icon.png" alt="">
+                                        <img src="/assets/img/icon/check_icon.png" alt="">
                                         Seo quotes to inspire your campaign
                                     </li>
                                     <li>
-                                        <img src="assets/img/icon/check_icon.png" alt="">
+                                        <img src="/assets/img/icon/check_icon.png" alt="">
                                         Much easier to double your business
                                     </li>
                                     <li>
-                                        <img src="assets/img/icon/check_icon.png" alt="">
+                                        <img src="/assets/img/icon/check_icon.png" alt="">
                                         Free page speed insights tool to find out exactly
                                     </li>
                                     <li>
-                                        <img src="assets/img/icon/check_icon.png" alt="">
+                                        <img src="/assets/img/icon/check_icon.png" alt="">
                                         Seo quotes to inspire your campaign
                                     </li>
                                 </ul>
@@ -354,7 +354,7 @@
                 </div>
             </div>
             <div class="company-shape-wrap">
-                <img src="assets/img/images/company_shape.png" alt="">
+                <img src="/assets/img/images/company_shape.png" alt="">
             </div>
         </section>
         <!-- company-area-end -->
@@ -376,7 +376,7 @@
                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-10">
                             <div class="services-item-five">
                                 <div class="services-icon-five">
-                                    <img src="assets/img/icon/inner_two_services_icon01.png" alt="">
+                                    <img src="/assets/img/icon/inner_two_services_icon01.png" alt="">
                                 </div>
                                 <div class="services-content-five">
                                     <h2 class="title"><a href="web-developement.html">User Interaction
@@ -388,7 +388,7 @@
                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-10">
                             <div class="services-item-five">
                                 <div class="services-icon-five">
-                                    <img src="assets/img/icon/inner_two_services_icon02.png" alt="">
+                                    <img src="/assets/img/icon/inner_two_services_icon02.png" alt="">
                                 </div>
                                 <div class="services-content-five">
                                     <h2 class="title"><a href="web-developement.html">Production <span>Design</span></a>
@@ -400,7 +400,7 @@
                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-10">
                             <div class="services-item-five">
                                 <div class="services-icon-five">
-                                    <img src="assets/img/icon/inner_two_services_icon03.png" alt="">
+                                    <img src="/assets/img/icon/inner_two_services_icon03.png" alt="">
                                 </div>
                                 <div class="services-content-five">
                                     <h2 class="title"><a href="web-developement.html">Branding <span>Design</span></a>
@@ -412,7 +412,7 @@
                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-10">
                             <div class="services-item-five">
                                 <div class="services-icon-five">
-                                    <img src="assets/img/icon/inner_two_services_icon04.png" alt="">
+                                    <img src="/assets/img/icon/inner_two_services_icon04.png" alt="">
                                 </div>
                                 <div class="services-content-five">
                                     <h2 class="title"><a href="web-developement.html">Product <span>Design</span></a>
@@ -444,7 +444,7 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project01.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_project01.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -456,7 +456,7 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project02.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_project02.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -468,7 +468,7 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project03.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_project03.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -480,7 +480,7 @@
                         <div class="col-lg-8 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project04.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_project04.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -492,7 +492,7 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project05.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_project05.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -504,7 +504,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project06.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_project06.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -516,7 +516,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project07.jpg"
+                                    <a href="project-details.html"><img src="/assets/img/project/inner_project07.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
@@ -544,7 +544,7 @@
                         <div class="col-lg-3 col-sm-6">
                             <div class="footer-widget">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo/w_logo.png" alt=""></a>
+                                    <a href="index.html"><img src="/assets/img/logo/w_logo.png" alt=""></a>
                                 </div>
                                 <div class="footer-social">
                                     <ul class="list-wrap">
@@ -591,11 +591,11 @@
                                 <h4 class="fw-title">About Store</h4>
                                 <div class="footer-about">
                                     <ul class="list-wrap">
-                                        <li><img src="assets/img/icon/phone_icon.svg" alt=""><a href="tel:0123456789">8
+                                        <li><img src="/assets/img/icon/phone_icon.svg" alt=""><a href="tel:0123456789">8
                                                 (495) 989—20—11</a></li>
-                                        <li><img src="assets/img/icon/mail_icon.svg" alt=""><a
+                                        <li><img src="/assets/img/icon/mail_icon.svg" alt=""><a
                                                 href="mailto:company@gmail.com">company@gmail.com</a></li>
-                                        <li><img src="assets/img/icon/loction_icon.svg" alt=""><span>Ranelagh Place,
+                                        <li><img src="/assets/img/icon/loction_icon.svg" alt=""><span>Ranelagh Place,
                                                 Liverpool, L3 5UL, England</span></li>
                                     </ul>
                                 </div>
@@ -609,7 +609,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="cart-img">
-                                <img src="assets/img/images/cart_img.png" alt="">
+                                <img src="/assets/img/images/cart_img.png" alt="">
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -627,21 +627,21 @@
 
 
     <!-- JS here -->
-    <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/jquery.odometer.min.js"></script>
-    <script src="assets/js/swiper-bundle.min.js"></script>
-    <script src="assets/js/jquery.appear.js"></script>
-    <script src="assets/js/slick.min.js"></script>
-    <script src="assets/js/ajax-form.js"></script>
-    <script src="assets/js/parallax.min.js"></script>
-    <script src="assets/js/jquery.parallaxScroll.min.js"></script>
-    <script src="assets/js/tween-max.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/isotope.pkgd.min.js"></script>
+    <script src="/assets/js/imagesloaded.pkgd.min.js"></script>
+    <script src="/assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="/assets/js/jquery.odometer.min.js"></script>
+    <script src="/assets/js/swiper-bundle.min.js"></script>
+    <script src="/assets/js/jquery.appear.js"></script>
+    <script src="/assets/js/slick.min.js"></script>
+    <script src="/assets/js/ajax-form.js"></script>
+    <script src="/assets/js/parallax.min.js"></script>
+    <script src="/assets/js/jquery.parallaxScroll.min.js"></script>
+    <script src="/assets/js/tween-max.js"></script>
+    <script src="/assets/js/wow.min.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
