--- a/team.html
+++ b/team.html
@@ -30,8 +30,7 @@
     <div id="preloader">
         <div id="loader" class="loader">
             <div class="loader-container">
-                <div class="loader-icon"><img src="assets/img/preloader.png"
-                        alt="Crazy-Softnet Technologies"></div>
+                <div class="loader-icon"><img src="assets/img/preloader.png" alt="Crazy-Softnet Technologies"></div>
             </div>
         </div>
     </div>
@@ -368,6 +367,7 @@
         </section>
         <!-- team-area-end -->
 
+
         <!-- project-area -->
         <section class="inner-projcet-area-two pt-100">
             <div class="container">
@@ -522,6 +522,8 @@
             </div>
         </section>
         <!-- project-area-end -->
+
+
 
         <!-- brand-area -->
         <section class="brand-area-two pt-110">
