--- a/about-us.html
+++ b/about-us.html
@@ -30,8 +30,7 @@
     <div id="preloader">
         <div id="loader" class="loader">
             <div class="loader-container">
-                <div class="loader-icon"><img src="assets/img/preloader.png"
-                        alt="Crazy-Softnet Technologies">
+                <div class="loader-icon"><img src="assets/img/preloader.png" alt="Crazy-Softnet Technologies">
                 </div>
             </div>
         </div>
@@ -226,7 +225,7 @@
     <main>
 
         <!-- breadcrumb-area -->
-        <section class="breadcrumb-area pt-175 pb-140">
+        <section class="breadcrumb-area pt-175 pb-100">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -436,6 +435,47 @@
             </div>
         </section>
         <!-- team-area-end -->
+        <!-- developr-area -->
+        <section class="developr-area-two pb-100">
+            <div class="container">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-lg-6 col-md-9 order-0 order-lg-2">
+                        <div class="developr-img">
+                            <img src="assets/img/images/developer_img.png" alt="">
+                            <div class="work-experience-wrap">
+                                <h2 class="count"><span class="odometer" data-count="18"></span>+</h2>
+                                <p>Years Of Experience</p>
+                            </div>
+                            <div class="project-completed-wrap">
+                                <h2 class="count"><span class="odometer" data-count="5"></span>K+</h2>
+                                <p>Have Faithfully Completed Projects Till Date</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="developr-content-two">
+                            <div class="section-title title-style-two mb-20">
+                                <span class="sub-title">What We Do</span>
+                                <h2 class="title">We design and develop web and mobile applications for our clients
+                                    worldwide</h2>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet, sed nulla ante amet, elementum tincidunt arcu sed laoreet,
+                                natoque ac eget imperdiet. Ac scelerisque nibh dolores consectetuer,</p>
+                            <div class="developr-social">
+                                <ul class="list-wrap">
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- developr-area-end -->
 
         <!-- services-area -->
         <section class="inner-services-area pt-110 pb-100">
