--- a/team.html
+++ b/team.html
@@ -270,10 +270,10 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
-                                <h2 class="title"><a href="team-details.html">Lav Patel</a></h2>
+                                <h2 class="title"><a href="team.html">Lav Patel</a></h2>
                                 <span>CEO</span>
                                 <div class="team-social">
                                     <ul class="list-wrap">
@@ -289,10 +289,10 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
-                                <h2 class="title"><a href="team-details.html">Nimit Desai</a></h2>
+                                <h2 class="title"><a href="team.html">Nimit Desai</a></h2>
                                 <span>CoFounder</span>
                                 <div class="team-social">
                                     <ul class="list-wrap">
@@ -308,10 +308,10 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
-                                <h2 class="title"><a href="team-details.html">Preksha Patel</a></h2>
+                                <h2 class="title"><a href="team.html">Preksha Patel</a></h2>
                                 <span>CTO</span>
                                 <div class="team-social">
                                     <ul class="list-wrap">
@@ -327,10 +327,10 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
-                                <h2 class="title"><a href="team-details.html">Abhay Mandli</a></h2>
+                                <h2 class="title"><a href="team.html">Abhay Mandli</a></h2>
                                 <span>CMO</span>
                                 <div class="team-social">
                                     <ul class="list-wrap">
@@ -346,10 +346,10 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
-                                <h2 class="title"><a href="team-details.html">Drashti Patel</a></h2>
+                                <h2 class="title"><a href="team.html">Drashti Patel</a></h2>
                                 <span>Chief Designer</span>
                                 <div class="team-social">
                                     <ul class="list-wrap">
