--- a/about-us.html
+++ b/about-us.html
@@ -339,10 +339,10 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
-                                <h2 class="title"><a href="team-details.html">Lav Patel</a></h2>
+                                <h2 class="title"><a href="team.html">Lav Patel</a></h2>
                                 <span>CEO</span>
                                 <div class="team-social">
                                     <ul class="list-wrap">
@@ -358,10 +358,10 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
-                                <h2 class="title"><a href="team-details.html">Nimit Desai</a></h2>
+                                <h2 class="title"><a href="team.html">Nimit Desai</a></h2>
                                 <span>CoFounder</span>
                                 <div class="team-social">
                                     <ul class="list-wrap">
@@ -377,10 +377,10 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
-                                <h2 class="title"><a href="team-details.html">Preksha Patel</a></h2>
+                                <h2 class="title"><a href="team.html">Preksha Patel</a></h2>
                                 <span>CTO</span>
                                 <div class="team-social">
                                     <ul class="list-wrap">
@@ -396,10 +396,10 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
-                                <h2 class="title"><a href="team-details.html">Abhay Mandli</a></h2>
+                                <h2 class="title"><a href="team.html">Abhay Mandli</a></h2>
                                 <span>CMO</span>
                                 <div class="team-social">
                                     <ul class="list-wrap">
@@ -415,10 +415,10 @@
                     <div class="col-lg-4">
                         <div class="team-item">
                             <div class="team-thumb">
-                                <a href="team-details.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
+                                <a href="team.html"><img src="assets/img/team/inner_team02.jpg" alt=""></a>
                             </div>
                             <div class="team-content">
-                                <h2 class="title"><a href="team-details.html">Drashti Patel</a></h2>
+                                <h2 class="title"><a href="team.html">Drashti Patel</a></h2>
                                 <span>Chief Designer</span>
                                 <div class="team-social">
                                     <ul class="list-wrap">
