--- a/index-3.html
+++ b/index-3.html
@@ -71,7 +71,7 @@
                                                 <ul class="sub-menu">
                                                     <li><a href="about-me.html">About Me</a></li>
                                                     <li><a href="team.html">Team Page</a></li>
-                                                    <li><a href="team-details.html">Team Details</a></li>
+                                                    <li><a href="team.html">Team Details</a></li>
                                                     <li><a href="project-details.html">Portfolio Details</a></li>
                                                     <li><a href="web-developement.html">Services Details</a></li>
                                                     <li><a href="contact.html">Contact Us</a></li>
