--- a/about-me.html
+++ b/about-me.html
@@ -73,7 +73,7 @@
                                                     <li class="active"><a href="about-me.html">About Me</a></li>
                                                     <li><a href="team.html">Team Page</a></li>
                                                     <li><a href="team.html">Team Details</a></li>
-                                                    <li><a href="project-details.html">Portfolio Details</a></li>
+                                                    <li><a href="why-us.html">Portfolio Details</a></li>
                                                     <li><a href="web-developement.html">Services Details</a></li>
                                                     <li><a href="contact.html">Contact Us</a></li>
                                                 </ul>
@@ -176,7 +176,7 @@
                                             <div class="our-best-project">
                                                 <div class="content">
                                                     <h4 class="title">One of Our <span>Best Ongoing</span> Projects</h4>
-                                                    <a href="project-details.html" class="btn">Details <span></span></a>
+                                                    <a href="why-us.html" class="btn">Details <span></span></a>
                                                 </div>
                                                 <div class="thumb">
                                                     <img src="assets/img/images/our_project_img.png" alt="">
