--- a/index-2.html
+++ b/index-2.html
@@ -72,7 +72,7 @@
                                                     <li><a href="about-me.html">About Me</a></li>
                                                     <li><a href="team.html">Team Page</a></li>
                                                     <li><a href="team.html">Team Details</a></li>
-                                                    <li><a href="project-details.html">Portfolio Details</a></li>
+                                                    <li><a href="why-us.html">Portfolio Details</a></li>
                                                     <li><a href="web-developement.html">Services Details</a></li>
                                                     <li><a href="contact.html">Contact Us</a></li>
                                                 </ul>
@@ -174,7 +174,7 @@
                                             <div class="our-best-project">
                                                 <div class="content">
                                                     <h4 class="title">One of Our <span>Best Ongoing</span> Projects</h4>
-                                                    <a href="project-details.html" class="btn">Details <span></span></a>
+                                                    <a href="why-us.html" class="btn">Details <span></span></a>
                                                 </div>
                                                 <div class="thumb">
                                                     <img src="assets/img/images/our_project_img.png" alt="">
@@ -448,10 +448,10 @@
                             <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-three cat-two">
                                 <div class="project-item-two">
                                     <div class="project-thumb-two">
-                                        <a href="project-details.html"><img src="assets/img/project/h2_project_img01.jpg" alt=""></a>
+                                        <a href="why-us.html"><img src="assets/img/project/h2_project_img01.jpg" alt=""></a>
                                     </div>
                                     <div class="project-content-two">
-                                        <h2 class="title"><a href="project-details.html">Motion Design</a></h2>
+                                        <h2 class="title"><a href="why-us.html">Motion Design</a></h2>
                                         <span>Lorem Ipsum is simply</span>
                                     </div>
                                 </div>
@@ -459,10 +459,10 @@
                             <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-four cat-five">
                                 <div class="project-item-two">
                                     <div class="project-thumb-two">
-                                        <a href="project-details.html"><img src="assets/img/project/h2_project_img02.jpg" alt=""></a>
+                                        <a href="why-us.html"><img src="assets/img/project/h2_project_img02.jpg" alt=""></a>
                                     </div>
                                     <div class="project-content-two">
-                                        <h2 class="title"><a href="project-details.html">Motion Design</a></h2>
+                                        <h2 class="title"><a href="why-us.html">Motion Design</a></h2>
                                         <span>Lorem Ipsum is simply</span>
                                     </div>
                                 </div>
@@ -470,10 +470,10 @@
                             <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-two cat-one">
                                 <div class="project-item-two">
                                     <div class="project-thumb-two">
-                                        <a href="project-details.html"><img src="assets/img/project/h2_project_img03.jpg" alt=""></a>
+                                        <a href="why-us.html"><img src="assets/img/project/h2_project_img03.jpg" alt=""></a>
                                     </div>
                                     <div class="project-content-two">
-                                        <h2 class="title"><a href="project-details.html">Motion Design</a></h2>
+                                        <h2 class="title"><a href="why-us.html">Motion Design</a></h2>
                                         <span>Lorem Ipsum is simply</span>
                                     </div>
                                 </div>
@@ -481,10 +481,10 @@
                             <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-four cat-five">
                                 <div class="project-item-two">
                                     <div class="project-thumb-two">
-                                        <a href="project-details.html"><img src="assets/img/project/h2_project_img05.jpg" alt=""></a>
+                                        <a href="why-us.html"><img src="assets/img/project/h2_project_img05.jpg" alt=""></a>
                                     </div>
                                     <div class="project-content-two">
-                                        <h2 class="title"><a href="project-details.html">Motion Design</a></h2>
+                                        <h2 class="title"><a href="why-us.html">Motion Design</a></h2>
                                         <span>Lorem Ipsum is simply</span>
                                     </div>
                                 </div>
@@ -492,10 +492,10 @@
                             <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-one cat-five">
                                 <div class="project-item-two">
                                     <div class="project-thumb-two">
-                                        <a href="project-details.html"><img src="assets/img/project/h2_project_img04.jpg" alt=""></a>
+                                        <a href="why-us.html"><img src="assets/img/project/h2_project_img04.jpg" alt=""></a>
                                     </div>
                                     <div class="project-content-two">
-                                        <h2 class="title"><a href="project-details.html">Motion Design</a></h2>
+                                        <h2 class="title"><a href="why-us.html">Motion Design</a></h2>
                                         <span>Lorem Ipsum is simply</span>
                                     </div>
                                 </div>
@@ -503,10 +503,10 @@
                             <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-two cat-five">
                                 <div class="project-item-two">
                                     <div class="project-thumb-two">
-                                        <a href="project-details.html"><img src="assets/img/project/h2_project_img06.jpg" alt=""></a>
+                                        <a href="why-us.html"><img src="assets/img/project/h2_project_img06.jpg" alt=""></a>
                                     </div>
                                     <div class="project-content-two">
-                                        <h2 class="title"><a href="project-details.html">Motion Design</a></h2>
+                                        <h2 class="title"><a href="why-us.html">Motion Design</a></h2>
                                         <span>Lorem Ipsum is simply</span>
                                     </div>
                                 </div>
