--- a/about-us.html
+++ b/about-us.html
@@ -70,7 +70,7 @@
                                                 <li><a href="app-developement.html">App Development</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="project-details.html">Why Us?</a></li>
+                                        <li><a href="why-us.html">Why Us?</a></li>
                                         <li><a href="team.html">Our Team</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
 
@@ -90,7 +90,7 @@
                                 </div>
                                 <div class="header-action">
                                     <ul class="list-wrap">
-                                        <li class="header-btn"><a href="javascript:void(0)" class="btn">Contact
+                                        <li class="header-btn"><a href="javascript:void(0)" class="btn">Get in touch
                                                 <span></span></a></li>
                                     </ul>
                                 </div>
@@ -157,7 +157,7 @@
                                                         </svg>
                                                     </div>
                                                     <div class="content">
-                                                        <span>Ranelagh Place, Liverpool, L3 5UL, England</span>
+                                                        <span>903, SHAGUN PALACE, SHIVRANJANI CROSS ROAD, Ahmedabad, Gujarat, 380015</span>
                                                     </div>
                                                 </li>
                                                 <li>
@@ -182,7 +182,7 @@
                                         <div class="our-best-project">
                                             <div class="content">
                                                 <h4 class="title">One of Our <span>Best Ongoing</span> Projects</h4>
-                                                <a href="project-details.html" class="btn">Details <span></span></a>
+                                                <a href="why-us.html" class="btn">Details <span></span></a>
                                             </div>
                                             <div class="thumb">
                                                 <img src="assets/img/images/our_project_img.png" alt="">
@@ -981,8 +981,8 @@
                                                 (495) 989—20—11</a></li>
                                         <li><img src="assets/img/icon/mail_icon.svg" alt=""><a
                                                 href="mailto:company@gmail.com">company@gmail.com</a></li>
-                                        <li><img src="assets/img/icon/loction_icon.svg" alt=""><span>Ranelagh Place,
-                                                Liverpool, L3 5UL, England</span></li>
+                                        <li><img src="assets/img/icon/loction_icon.svg" alt=""><span>903, SHAGUN PALACE,
+                                                SHIVRANJANI CROSS ROAD, Ahmedabad, Gujarat, 380015</span></li>
                                     </ul>
                                 </div>
                             </div>
