--- a/app-developement.html
+++ b/app-developement.html
@@ -71,7 +71,7 @@
                                                 </li>
                                             </ul>
                                         </li>
-                                        <li><a href="project-details.html">Why Us?</a></li>
+                                        <li><a href="why-us.html">Why Us?</a></li>
                                         <li><a href="team.html">Our Team</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
 
@@ -91,7 +91,7 @@
                                 </div>
                                 <div class="header-action">
                                     <ul class="list-wrap">
-                                        <li class="header-btn"><a href="javascript:void(0)" class="btn">Contact
+                                        <li class="header-btn"><a href="javascript:void(0)" class="btn">Get in touch
                                                 <span></span></a></li>
                                     </ul>
                                 </div>
@@ -157,7 +157,7 @@
                                                         </svg>
                                                     </div>
                                                     <div class="content">
-                                                        <span>Ranelagh Place, Liverpool, L3 5UL, England</span>
+                                                        <span>903, SHAGUN PALACE, SHIVRANJANI CROSS ROAD, Ahmedabad, Gujarat, 380015</span>
                                                     </div>
                                                 </li>
                                                 <li>
@@ -182,7 +182,7 @@
                                         <div class="our-best-project">
                                             <div class="content">
                                                 <h4 class="title">One of Our <span>Best Ongoing</span> Projects</h4>
-                                                <a href="project-details.html" class="btn">Details <span></span></a>
+                                                <a href="why-us.html" class="btn">Details <span></span></a>
                                             </div>
                                             <div class="thumb">
                                                 <img src="assets/img/images/our_project_img.png" alt="">
@@ -322,7 +322,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="company-img">
-                            <img src="assets/img/images/app-developement-02.png" alt="">
+                            <img src="assets/img/images/app-developement-02.png" width="90%" alt="">
                             <img src="assets/img/images/company_img02.png" alt="" data-parallax='{"x" : 100 }'>
                         </div>
                     </div>
@@ -445,11 +445,11 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project01.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project01.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -457,11 +457,11 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project02.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project02.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -469,11 +469,11 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project03.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project03.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -481,11 +481,11 @@
                         <div class="col-lg-8 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project04.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project04.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -493,11 +493,11 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project05.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project05.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -505,11 +505,11 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project06.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project06.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -517,11 +517,11 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project07.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project07.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -537,37 +537,84 @@
 
     <!-- footer-area -->
     <footer>
-        <div class="footer-area-two">
-            <div class="container">
-                <div class="footer-top-two">
-                    <div class="row justify-content-center">
-                        <div class="col-xl-6 col-lg-8">
-                            <div class="footer-content-two text-center">
+        <div class="footer-area">
+            <div class="footer-top">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="footer-widget">
                                 <div class="logo">
                                     <a href="index.html"><img src="assets/img/logo/w_logo.png" alt=""></a>
                                 </div>
-                                <p>Agency is a full-service agency, busy designing and building beautiful digital
-                                    products, brands, and experiences.</p>
+                                <div class="footer-social">
+                                    <ul class="list-wrap">
+                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li class="active"><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                    </ul>
+                                </div>
+                                <div class="footer-contact">
+                                    <span>For Support</span>
+                                    <h2 class="title"><a href="tel:0123456789">0123 - 567 - 7650</a></h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="footer-widget">
+                                <h4 class="fw-title">Primary Pages</h4>
+                                <div class="fw-link">
+                                    <ul class="list-wrap">
+                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="about-us.html">About</a></li>
+                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="web-developement.html">Service</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="footer-widget">
+                                <h4 class="fw-title">Pages</h4>
+                                <div class="fw-link">
+                                    <ul class="list-wrap">
+                                        <li><a href="about-us.html">About</a></li>
+                                        <li><a href="contact.html">Pricing</a></li>
+                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="contact.html">Request for Demo</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="footer-widget">
+                                <h4 class="fw-title">About Store</h4>
+                                <div class="footer-about">
+                                    <ul class="list-wrap">
+                                        <li><img src="assets/img/icon/phone_icon.svg" alt=""><a href="tel:0123456789">8
+                                                (495) 989—20—11</a></li>
+                                        <li><img src="assets/img/icon/mail_icon.svg" alt=""><a
+                                                href="mailto:company@gmail.com">company@gmail.com</a></li>
+                                        <li><img src="assets/img/icon/loction_icon.svg" alt=""><span>903, SHAGUN PALACE,
+                                                SHIVRANJANI CROSS ROAD, Ahmedabad, Gujarat, 380015</span></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="footer-bottom-two">
+            </div>
+            <div class="footer-bottom">
+                <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-6">
-                            <div class="copyright-text">
-                                <p>© 2023, Creative Agency.</p>
+                            <div class="cart-img">
+                                <img src="assets/img/images/cart_img.png" alt="">
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="footer-social-two">
-                                <ul class="list-wrap">
-                                    <li class="title">Follow us</li>
-                                    <li><a href="#"><img src="assets/img/icon/footer_icon01.png" alt=""></a></li>
-                                    <li><a href="#"><img src="assets/img/icon/footer_icon02.png" alt=""></a></li>
-                                    <li><a href="#"><img src="assets/img/icon/footer_icon03.png" alt=""></a></li>
-                                    <li><a href="#"><img src="assets/img/icon/footer_icon04.png" alt=""></a></li>
-                                </ul>
+                            <div class="copyright-text text-end">
+                                <p>© 2023 xilio. All Rights Reserved</p>
                             </div>
                         </div>
                     </div>
