--- a/web-developement.html
+++ b/web-developement.html
@@ -70,7 +70,7 @@
                                                 <li><a href="app-developement.html">App Development</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="project-details.html">Why Us?</a></li>
+                                        <li><a href="why-us.html">Why Us?</a></li>
                                         <li><a href="team.html">Our Team</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
 
@@ -156,7 +156,7 @@
                                                         </svg>
                                                     </div>
                                                     <div class="content">
-                                                        <span>Ranelagh Place, Liverpool, L3 5UL, England</span>
+                                                        <span>903, SHAGUN PALACE, SHIVRANJANI CROSS ROAD, Ahmedabad, Gujarat, 380015</span>
                                                     </div>
                                                 </li>
                                                 <li>
@@ -181,7 +181,7 @@
                                         <div class="our-best-project">
                                             <div class="content">
                                                 <h4 class="title">One of Our <span>Best Ongoing</span> Projects</h4>
-                                                <a href="project-details.html" class="btn">Details <span></span></a>
+                                                <a href="why-us.html" class="btn">Details <span></span></a>
                                             </div>
                                             <div class="thumb">
                                                 <img src="assets/img/images/our_project_img.png" alt="">
@@ -249,7 +249,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-8 col-lg-10">
                         <div class="services-details-img text-center">
-                            <img src="assets/img/images/services_details_img.png" alt="">
+                            <img src="assets/img/images/web-developement.png" alt="">
                         </div>
                         <div class="services-details-content text-center">
                             <p>Lorem ipsum dolor sit amet, sed nulla ante amet, elementum tincidunt arcu sed laoreet,
@@ -321,7 +321,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="company-img">
-                            <img src="assets/img/images/company_img01.png" alt="">
+                            <img src="assets/img/images/web-developement-01.png" alt="">
                             <img src="assets/img/images/company_img02.png" alt="" data-parallax='{"x" : 120 }'>
                         </div>
                     </div>
@@ -444,11 +444,11 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project01.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project01.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -456,11 +456,11 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project02.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project02.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -468,11 +468,11 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project03.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project03.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -480,11 +480,11 @@
                         <div class="col-lg-8 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project04.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project04.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -492,11 +492,11 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project05.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project05.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -504,11 +504,11 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project06.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project06.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -516,11 +516,11 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="inner-project-item">
                                 <div class="inner-project-thumb">
-                                    <a href="project-details.html"><img src="assets/img/project/inner_project07.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/inner_project07.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="inner-project-content">
-                                    <h3 class="title"><a href="project-details.html">Motion Design</a></h3>
+                                    <h3 class="title"><a href="why-us.html">Motion Design</a></h3>
                                     <p>Lorem Ipsum is simply</p>
                                 </div>
                             </div>
@@ -595,8 +595,8 @@
                                                 (495) 989—20—11</a></li>
                                         <li><img src="assets/img/icon/mail_icon.svg" alt=""><a
                                                 href="mailto:company@gmail.com">company@gmail.com</a></li>
-                                        <li><img src="assets/img/icon/loction_icon.svg" alt=""><span>Ranelagh Place,
-                                                Liverpool, L3 5UL, England</span></li>
+                                        <li><img src="assets/img/icon/loction_icon.svg" alt=""><span>903, SHAGUN PALACE,
+                                                SHIVRANJANI CROSS ROAD, Ahmedabad, Gujarat, 380015</span></li>
                                     </ul>
                                 </div>
                             </div>
