--- a/why-us.html
+++ b/why-us.html
@@ -70,7 +70,7 @@
                                                 <li><a href="app-developement.html">App Development</a></li>
                                             </ul>
                                         </li>
-                                        <li class="active"><a href="project-details.html">Why Us?</a></li>
+                                        <li class="active"><a href="why-us.html">Why Us?</a></li>
                                         <li><a href="team.html">Our Team</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
 
@@ -90,7 +90,7 @@
                                 </div>
                                 <div class="header-action">
                                     <ul class="list-wrap">
-                                        <li class="header-btn"><a href="javascript:void(0)" class="btn">Contact
+                                        <li class="header-btn"><a href="javascript:void(0)" class="btn">Get in touch
                                                 <span></span></a></li>
                                     </ul>
                                 </div>
@@ -157,7 +157,7 @@
                                                         </svg>
                                                     </div>
                                                     <div class="content">
-                                                        <span>Ranelagh Place, Liverpool, L3 5UL, England</span>
+                                                        <span>903, SHAGUN PALACE, SHIVRANJANI CROSS ROAD, Ahmedabad, Gujarat, 380015</span>
                                                     </div>
                                                 </li>
                                                 <li>
@@ -182,7 +182,7 @@
                                         <div class="our-best-project">
                                             <div class="content">
                                                 <h4 class="title">One of Our <span>Best Ongoing</span> Projects</h4>
-                                                <a href="project-details.html" class="btn">Details <span></span></a>
+                                                <a href="why-us.html" class="btn">Details <span></span></a>
                                             </div>
                                             <div class="thumb">
                                                 <img src="assets/img/images/our_project_img.png" alt="">
@@ -265,11 +265,11 @@
                         <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-three cat-two">
                             <div class="project-item-two">
                                 <div class="project-thumb-two">
-                                    <a href="project-details.html"><img src="assets/img/project/h2_project_img01.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/h2_project_img01.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="project-content-two">
-                                    <h2 class="title"><a href="project-details.html">Motion Design 1</a></h2>
+                                    <h2 class="title"><a href="why-us.html">Motion Design 1</a></h2>
                                     <span>Lorem Ipsum is simply</span>
                                 </div>
                             </div>
@@ -277,11 +277,11 @@
                         <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-four cat-five">
                             <div class="project-item-two">
                                 <div class="project-thumb-two">
-                                    <a href="project-details.html"><img src="assets/img/project/h2_project_img02.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/h2_project_img02.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="project-content-two">
-                                    <h2 class="title"><a href="project-details.html">Motion Design</a></h2>
+                                    <h2 class="title"><a href="why-us.html">Motion Design</a></h2>
                                     <span>Lorem Ipsum is simply</span>
                                 </div>
                             </div>
@@ -289,11 +289,11 @@
                         <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-two cat-one">
                             <div class="project-item-two">
                                 <div class="project-thumb-two">
-                                    <a href="project-details.html"><img src="assets/img/project/h2_project_img03.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/h2_project_img03.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="project-content-two">
-                                    <h2 class="title"><a href="project-details.html">Motion Design</a></h2>
+                                    <h2 class="title"><a href="why-us.html">Motion Design</a></h2>
                                     <span>Lorem Ipsum is simply</span>
                                 </div>
                             </div>
@@ -301,11 +301,11 @@
                         <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-four cat-five">
                             <div class="project-item-two">
                                 <div class="project-thumb-two">
-                                    <a href="project-details.html"><img src="assets/img/project/h2_project_img05.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/h2_project_img05.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="project-content-two">
-                                    <h2 class="title"><a href="project-details.html">Motion Design</a></h2>
+                                    <h2 class="title"><a href="why-us.html">Motion Design</a></h2>
                                     <span>Lorem Ipsum is simply</span>
                                 </div>
                             </div>
@@ -313,11 +313,11 @@
                         <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-one cat-five">
                             <div class="project-item-two">
                                 <div class="project-thumb-two">
-                                    <a href="project-details.html"><img src="assets/img/project/h2_project_img04.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/h2_project_img04.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="project-content-two">
-                                    <h2 class="title"><a href="project-details.html">Motion Design</a></h2>
+                                    <h2 class="title"><a href="why-us.html">Motion Design</a></h2>
                                     <span>Lorem Ipsum is simply</span>
                                 </div>
                             </div>
@@ -325,11 +325,11 @@
                         <div class="col-lg-4 col-md-6 grid-item grid-sizer cat-two cat-five">
                             <div class="project-item-two">
                                 <div class="project-thumb-two">
-                                    <a href="project-details.html"><img src="assets/img/project/h2_project_img06.jpg"
+                                    <a href="why-us.html"><img src="assets/img/project/h2_project_img06.jpg"
                                             alt=""></a>
                                 </div>
                                 <div class="project-content-two">
-                                    <h2 class="title"><a href="project-details.html">Motion Design</a></h2>
+                                    <h2 class="title"><a href="why-us.html">Motion Design</a></h2>
                                     <span>Lorem Ipsum is simply</span>
                                 </div>
                             </div>
@@ -356,7 +356,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="company-img">
-                            <img src="assets/img/images/company_img01.png" alt="">
+                            <img src="assets/img/images/company-image-03.png" alt="">
                             <img src="assets/img/images/company_img02.png" alt="" data-parallax='{"x" : 120 }'>
                         </div>
                     </div>
@@ -395,7 +395,7 @@
         <!-- company-area-end -->
 
         <!-- services-area -->
-        <section class="inner-services-area-two pt-110 pb-90">
+        <section class="inner-services-area-two pt-100 pb-90">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
@@ -524,8 +524,8 @@
                                                 (495) 989—20—11</a></li>
                                         <li><img src="assets/img/icon/mail_icon.svg" alt=""><a
                                                 href="mailto:company@gmail.com">company@gmail.com</a></li>
-                                        <li><img src="assets/img/icon/loction_icon.svg" alt=""><span>Ranelagh Place,
-                                                Liverpool, L3 5UL, England</span></li>
+                                        <li><img src="assets/img/icon/loction_icon.svg" alt=""><span>903, SHAGUN PALACE,
+                                                SHIVRANJANI CROSS ROAD, Ahmedabad, Gujarat, 380015</span></li>
                                     </ul>
                                 </div>
                             </div>
